--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gigi</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/styles/github-dark.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/marked@11.1.1/marked.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/lib/core.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/lib/languages/javascript.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/lib/languages/python.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/lib/languages/bash.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/lib/languages/json.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/lib/languages/typescript.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/lib/languages/go.min.js"></script>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: system-ui, sans-serif; background: #0a0a0a; color: #e0e0e0; height: 100vh; display: flex; }
@@ -25,16 +34,52 @@
     .status-dot.warn { background: #a84; }
     .status-dot.err { background: #a44; }
 
+    /* Hamburger menu */
+    .menu-btn { display: none; position: fixed; top: 1rem; left: 1rem; z-index: 1000; background: #1a1a1a; border: 1px solid #333; border-radius: 4px; padding: 0.5rem; cursor: pointer; }
+    .menu-btn span { display: block; width: 20px; height: 2px; background: #e0e0e0; margin: 4px 0; }
+
     /* Chat area */
     .chat { flex: 1; display: flex; flex-direction: column; }
+    .chat-header { padding: 1rem 2rem; border-bottom: 1px solid #222; }
+    .chat-header h1 { font-size: 1.1rem; font-weight: 500; color: #999; }
     .messages { flex: 1; overflow-y: auto; padding: 1rem 2rem; }
-    .message { margin-bottom: 1rem; max-width: 720px; }
+    .message { margin-bottom: 1.5rem; max-width: 720px; }
     .message.user { margin-left: auto; }
-    .message .role { font-size: 0.75rem; color: #666; margin-bottom: 0.25rem; }
-    .message .content { padding: 0.75rem 1rem; border-radius: 8px; font-size: 0.9rem; line-height: 1.5; white-space: pre-wrap; word-break: break-word; }
+    .message .meta { display: flex; gap: 0.5rem; font-size: 0.75rem; color: #666; margin-bottom: 0.25rem; align-items: center; }
+    .message .role { font-weight: 500; }
+    .message .timestamp { }
+    .message .content { padding: 0.75rem 1rem; border-radius: 8px; font-size: 0.9rem; line-height: 1.6; }
     .message.user .content { background: #1a3a2a; }
     .message.assistant .content { background: #141414; border: 1px solid #222; }
     .message .tool { font-size: 0.8rem; color: #886; font-family: monospace; }
+
+    /* Markdown styling */
+    .message .content p { margin: 0.5em 0; }
+    .message .content p:first-child { margin-top: 0; }
+    .message .content p:last-child { margin-bottom: 0; }
+    .message .content ul, .message .content ol { margin: 0.5em 0; padding-left: 1.5em; }
+    .message .content li { margin: 0.25em 0; }
+    .message .content pre { background: #0a0a0a; border: 1px solid #333; border-radius: 4px; padding: 0.75rem; margin: 0.5em 0; overflow-x: auto; }
+    .message .content code { font-family: 'Monaco', 'Courier New', monospace; font-size: 0.85em; }
+    .message .content pre code { font-size: 0.8em; }
+    .message .content:not(pre) > code { background: #1a1a1a; padding: 0.1em 0.3em; border-radius: 3px; }
+    .message .content blockquote { border-left: 3px solid #444; padding-left: 1em; margin: 0.5em 0; color: #999; }
+    .message .content h1, .message .content h2, .message .content h3 { margin: 1em 0 0.5em 0; }
+    .message .content h1 { font-size: 1.3em; }
+    .message .content h2 { font-size: 1.2em; }
+    .message .content h3 { font-size: 1.1em; }
+    .message .content a { color: #5a9fd4; text-decoration: none; }
+    .message .content a:hover { text-decoration: underline; }
+
+    /* Typing indicator */
+    .typing-indicator { display: inline-flex; gap: 4px; padding: 0.75rem 1rem; }
+    .typing-indicator span { width: 6px; height: 6px; background: #666; border-radius: 50%; animation: typing 1.4s infinite; }
+    .typing-indicator span:nth-child(2) { animation-delay: 0.2s; }
+    .typing-indicator span:nth-child(3) { animation-delay: 0.4s; }
+    @keyframes typing {
+      0%, 60%, 100% { opacity: 0.3; transform: translateY(0); }
+      30% { opacity: 1; transform: translateY(-6px); }
+    }
 
     /* Input */
     .input-area { padding: 1rem 2rem; border-top: 1px solid #222; }
@@ -42,17 +87,30 @@
     .input-row textarea { flex: 1; padding: 0.6rem 0.75rem; background: #141414; border: 1px solid #222; border-radius: 6px; color: #e0e0e0; font-family: system-ui, sans-serif; font-size: 0.9rem; resize: none; min-height: 42px; max-height: 200px; }
     .input-row textarea:focus { outline: none; border-color: #444; }
     .input-row button { padding: 0.6rem 1.2rem; background: #1a6; color: #fff; border: none; border-radius: 6px; cursor: pointer; white-space: nowrap; }
-    .input-row button:disabled { background: #333; color: #666; }
+    .input-row button:disabled { background: #333; color: #666; cursor: not-allowed; }
 
     /* Mobile */
-    @media (max-width: 640px) {
-      .sidebar { display: none; }
+    @media (max-width: 768px) {
+      .sidebar { position: fixed; top: 0; left: -260px; height: 100vh; z-index: 999; transition: left 0.3s; }
+      .sidebar.open { left: 0; }
+      .menu-btn { display: block; }
+      .chat-header { padding: 1rem 1rem 1rem 3.5rem; }
       .messages { padding: 1rem; }
       .input-area { padding: 0.75rem; }
+      .overlay { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); z-index: 998; }
+      .overlay.show { display: block; }
     }
   </style>
 </head>
 <body>
+  <button class="menu-btn" onclick="toggleSidebar()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+
+  <div class="overlay" onclick="toggleSidebar()"></div>
+
   <div class="sidebar">
     <div class="sidebar-header">
       <h2>Gigi</h2>
@@ -67,6 +125,9 @@
   </div>
 
   <div class="chat">
+    <div class="chat-header">
+      <h1 id="chat-title">New conversation</h1>
+    </div>
     <div class="messages" id="messages"></div>
     <div class="input-area">
       <div class="input-row">
@@ -78,19 +139,58 @@
   </div>
 
   <script>
+    // Configure marked for syntax highlighting
+    marked.setOptions({
+      highlight: function(code, lang) {
+        if (lang && hljs.getLanguage(lang)) {
+          return hljs.highlight(code, { language: lang }).value
+        }
+        return hljs.highlightAuto(code).value
+      },
+      breaks: true,
+      gfm: true
+    })
+
     const messagesEl = document.getElementById('messages')
     const inputEl = document.getElementById('input')
     const sendBtn = document.getElementById('send-btn')
+    const chatTitle = document.getElementById('chat-title')
     let sending = false
+    let messageCount = 0
 
-    const addMessage = (role, text) => {
+    const formatTime = (date) => {
+      const d = new Date(date)
+      const now = new Date()
+      const isToday = d.toDateString() === now.toDateString()
+      const timeStr = d.toLocaleTimeString('en-US', { hour: 'numeric', minute: '2-digit', hour12: true })
+      return isToday ? timeStr : `${d.toLocaleDateString('en-US', { month: 'short', day: 'numeric' })} ${timeStr}`
+    }
+
+    const addMessage = (role, text, timestamp = new Date()) => {
       const div = document.createElement('div')
       div.className = `message ${role}`
-      div.innerHTML = `<div class="role">${role === 'user' ? 'You' : 'Gigi'}</div><div class="content"></div>`
-      div.querySelector('.content').textContent = text
+      div.innerHTML = `
+        <div class="meta">
+          <span class="role">${role === 'user' ? 'You' : 'Gigi'}</span>
+          <span class="timestamp">${formatTime(timestamp)}</span>
+        </div>
+        <div class="content"></div>
+      `
+      const contentEl = div.querySelector('.content')
+      if (role === 'assistant') {
+        contentEl.innerHTML = marked.parse(text)
+      } else {
+        contentEl.textContent = text
+      }
       messagesEl.appendChild(div)
       messagesEl.scrollTop = messagesEl.scrollHeight
       return div
+    }
+
+    const updateChatTitle = (text) => {
+      // Generate title from first message
+      const title = text.slice(0, 50).trim() + (text.length > 50 ? '...' : '')
+      chatTitle.textContent = title
     }
 
     const send = async () => {
@@ -101,23 +201,85 @@
       sendBtn.disabled = true
       inputEl.value = ''
 
+      // Update title after first message
+      if (messageCount === 0) {
+        updateChatTitle(text)
+      }
+      messageCount++
+
       addMessage('user', text)
-      const assistantDiv = addMessage('assistant', 'Thinking...')
+
+      // Add typing indicator
+      const typingDiv = document.createElement('div')
+      typingDiv.className = 'message assistant'
+      typingDiv.innerHTML = `
+        <div class="meta">
+          <span class="role">Gigi</span>
+          <span class="timestamp">${formatTime(new Date())}</span>
+        </div>
+        <div class="content">
+          <div class="typing-indicator">
+            <span></span><span></span><span></span>
+          </div>
+        </div>
+      `
+      messagesEl.appendChild(typingDiv)
+      messagesEl.scrollTop = messagesEl.scrollHeight
 
       try {
-        const res = await fetch('/api/chat', {
+        const response = await fetch('/api/chat/stream', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ message: text })
         })
-        const data = await res.json()
-        if (data.error) {
-          assistantDiv.querySelector('.content').textContent = `Error: ${data.error}`
-        } else {
-          assistantDiv.querySelector('.content').textContent = data.response
+
+        // Remove typing indicator
+        typingDiv.remove()
+
+        // Create assistant message
+        const timestamp = new Date()
+        const assistantDiv = document.createElement('div')
+        assistantDiv.className = 'message assistant'
+        assistantDiv.innerHTML = `
+          <div class="meta">
+            <span class="role">Gigi</span>
+            <span class="timestamp">${formatTime(timestamp)}</span>
+          </div>
+          <div class="content"></div>
+        `
+        const contentEl = assistantDiv.querySelector('.content')
+        messagesEl.appendChild(assistantDiv)
+
+        // Stream response
+        const reader = response.body.getReader()
+        const decoder = new TextDecoder()
+        let buffer = ''
+        let fullText = ''
+
+        while (true) {
+          const { done, value } = await reader.read()
+          if (done) break
+
+          buffer += decoder.decode(value, { stream: true })
+          const lines = buffer.split('\n\n')
+          buffer = lines.pop() // Keep incomplete line in buffer
+
+          for (const line of lines) {
+            if (line.startsWith('data: ')) {
+              const data = JSON.parse(line.slice(6))
+              if (data.type === 'chunk') {
+                fullText += data.text
+                contentEl.innerHTML = marked.parse(fullText)
+                messagesEl.scrollTop = messagesEl.scrollHeight
+              } else if (data.type === 'error') {
+                contentEl.textContent = `Error: ${data.error}`
+              }
+            }
+          }
         }
       } catch (err) {
-        assistantDiv.querySelector('.content').textContent = `Error: ${err.message}`
+        typingDiv.remove()
+        const errorDiv = addMessage('assistant', `Error: ${err.message}`)
       }
 
       sending = false
@@ -129,7 +291,10 @@
     const newChat = async () => {
       await fetch('/api/conversations/new', { method: 'POST' })
       messagesEl.innerHTML = ''
+      chatTitle.textContent = 'New conversation'
+      messageCount = 0
       loadConversations()
+      closeSidebar()
     }
 
     const loadConversations = async () => {
@@ -148,12 +313,19 @@
         const res = await fetch(`/api/conversations/${id}/messages`)
         const msgs = await res.json()
         messagesEl.innerHTML = ''
-        msgs.forEach(m => {
+        messageCount = msgs.length
+        msgs.forEach((m, idx) => {
           const text = Array.isArray(m.content)
             ? m.content.filter(b => b.type === 'text').map(b => b.text).join('')
             : (typeof m.content === 'string' ? m.content : JSON.stringify(m.content))
-          addMessage(m.role, text)
+          addMessage(m.role, text, m.created_at || new Date())
+
+          // Update title from first user message
+          if (idx === 0 && m.role === 'user') {
+            updateChatTitle(text)
+          }
         })
+        closeSidebar()
       } catch {}
     }
 
@@ -169,6 +341,20 @@
         document.getElementById('status-dot').className = 'status-dot err'
         document.getElementById('status-text').textContent = 'Disconnected'
       }
+    }
+
+    const toggleSidebar = () => {
+      const sidebar = document.querySelector('.sidebar')
+      const overlay = document.querySelector('.overlay')
+      sidebar.classList.toggle('open')
+      overlay.classList.toggle('show')
+    }
+
+    const closeSidebar = () => {
+      const sidebar = document.querySelector('.sidebar')
+      const overlay = document.querySelector('.overlay')
+      sidebar.classList.remove('open')
+      overlay.classList.remove('show')
     }
 
     // Auto-resize textarea
