Configure Caddy for WebSocket and SSE proxying
- Route WebSocket connections through /ws path instead of port 3001
- Configure SSE with proper buffering disabled and no timeouts
- Update browser control to use /ws path through main domain
- Add comprehensive Caddy configuration documentation

This eliminates the need to expose port 3001 and fixes HTTPS/WSS
mixed content issues when accessing through claude.cluster.local

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/web/browser-control.html
+++ b/web/browser-control.html
@@ -206,7 +206,8 @@
         this.currentMode = 'headless';
         // Use secure WebSocket if page is served over HTTPS
         const wsProtocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
-        this.wsUrl = `${wsProtocol}//${window.location.hostname}:3001`;
+        // Use /ws path through the main domain to avoid port issues
+        this.wsUrl = `${wsProtocol}//${window.location.host}/ws`;
         // Note: Neko URL might need manual HTTPS setup on port 8080
         this.nekoUrl = `${window.location.protocol}//${window.location.hostname}:8080`;
 
