fix: proxy neko through Caddy at /browser instead of direct port 8080
Avoids SSL_ERROR_RX_RECORD_TOO_LONG when iframe loads neko over HTTPS
by routing through Caddy reverse proxy. Added neko to http-entry network
and removed the now-unnecessary port 8080 publish.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/web/browser-control.html
+++ b/web/browser-control.html
@@ -208,8 +208,8 @@
         const wsProtocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
         // Use /ws path through the main domain to avoid port issues
         this.wsUrl = `${wsProtocol}//${window.location.host}/ws`;
-        // Note: Neko URL might need manual HTTPS setup on port 8080
-        this.nekoUrl = `${window.location.protocol}//${window.location.hostname}:8080`;
+        // Neko is proxied through Caddy at /browser
+        this.nekoUrl = '/browser';
 
         this.initializeElements();
         this.connectWebSocket();
