fix: use browser.cluster.local subdomain for neko instead of subpath
Neko assets use absolute paths (/js/*, /css/*) which break when served
under a subpath. A dedicated subdomain avoids all path conflicts.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/web/browser-control.html
+++ b/web/browser-control.html
@@ -208,8 +208,8 @@
         const wsProtocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
         // Use /ws path through the main domain to avoid port issues
         this.wsUrl = `${wsProtocol}//${window.location.host}/ws`;
-        // Neko is proxied through Caddy at /browser
-        this.nekoUrl = '/browser';
+        // Neko is proxied through Caddy on its own subdomain
+        this.nekoUrl = `${window.location.protocol}//browser.cluster.local`;
 
         this.initializeElements();
         this.connectWebSocket();
