--- a/web/app/index.html
+++ b/web/app/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark" class="sl-theme-dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="color-scheme" content="dark light">
   <title>Gigi</title>
 </head>
 <body>
-  <div id="app">
-    <h1>Gigi</h1>
-    <p>Loading...</p>
-  </div>
+  <div id="app"></div>
   <script type="module" src="./main.ts"></script>
 </body>
 </html>
