feat: dark/light mode toggle in settings
- New theme store (theme.svelte.ts) with localStorage persistence
  and system preference detection as initial default
- Toggle in Settings panel switches between dark and light
- Inline script in index.html prevents flash of wrong theme
- Theme synced to Gitea iframe via postMessage bridge
- Shoelace overrides moved to :root (auto-switch via CSS var refs)
- OS preference changes auto-apply when no explicit choice stored

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark" class="sl-theme-dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="dark light">
   <title>Gigi</title>
+  <script>
+    // Apply theme before first paint to prevent flash
+    (function() {
+      var stored = null;
+      try { stored = localStorage.getItem('gigi:theme'); } catch(e) {}
+      var theme = (stored === 'dark' || stored === 'light')
+        ? stored
+        : (window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches ? 'light' : 'dark');
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.className = theme === 'dark' ? 'sl-theme-dark' : 'sl-theme-light';
+    })();
+  </script>
 </head>
 <body>
   <div id="app"></div>
