feat: add gigi-zen.png as custom Gitea logo and web favicon
- Add gigi-zen.png as Gitea custom logo and favicon at
  gitea/custom/public/assets/img/{logo,favicon}.png
- Update AIO entrypoint to symlink custom public assets dir
- Update scripts/entrypoint.sh to sync public assets to shared volume
- Switch dashboard welcome page to use gigi-zen.png
- Add favicon link to index.html

Closes #46

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="dark light">
   <title>Gigi</title>
+  <link rel="icon" type="image/png" href="/gigi-zen.png">
   <script>
     // Apply theme before first paint to prevent flash
     (function() {
