--- a/web/app/index.html
+++ b/web/app/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="dark light">
   <title>Gigi</title>
-  <link rel="icon" type="image/png" href="/gigi-zen.png">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="/gigi-zen.png">
   <script>
     // Apply theme before first paint to prevent flash
     (function() {
