--- a/web/browser-control.html
+++ b/web/browser-control.html
@@ -208,8 +208,8 @@
         const wsProtocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
         // Use /ws path through the main domain to avoid port issues
         this.wsUrl = `${wsProtocol}//${window.location.host}/ws`;
-        // Neko is proxied through Caddy on its own subdomain
-        this.nekoUrl = `${window.location.protocol}//browser.cluster.local`;
+        // Neko is proxied through Caddy on its own subdomain (configure BROWSER_DOMAIN)
+        this.nekoUrl = `${window.location.protocol}//${window.location.hostname.replace(/^[^.]+/, 'browser')}`;
 
         this.initializeElements();
         this.connectWebSocket();
