--- a/web/index.html
+++ b/web/index.html
@@ -246,7 +246,7 @@
         <h3>Browser Control</h3>
         <button class="browser-close" onclick="Browser.close()">×</button>
       </div>
-      <iframe class="browser-frame" id="browser-frame" src="https://browser.cluster.local"></iframe>
+      <iframe class="browser-frame" id="browser-frame" src=""></iframe>
     </div>
   </div>
 
